# dog-breed-bot

./: .gitignore  .pre-commit-config.yaml  README.md  mlflow.db  pyproject.toml
.dvc/: config
artifacts/: .gitignore  class_to_idx.json.dvc
artifacts/onnx/: model.onnx.data.dvc  model.onnx.dvc
artifacts/pt/: .gitignore  best.ckpt.dvc
configs/: mlflow.yaml  train.yaml
configs/data/: stanford_dogs.yaml
configs/model/: resnet101.yaml
data/: processed.dvc
data/raw/: .gitignore  stanford_dogs.dvc
dog_breed_bot/: commands.py
dog_breed_bot/bot/: telegram_bot.py
dog_breed_bot/data/: dataset.py  prepare_splits.py
dog_breed_bot/export/: onnx_export.py
dog_breed_bot/infer/: onnx_infer.py
dog_breed_bot/train/: datamodule.py  lightning_module.py  train.py
outputs/2026-01-04/04-42-55/.hydra/: config.yaml  hydra.yaml  overrides.yaml
