[project]
name = "dog-breed-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "saylock",email = "cntqpb@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry.scripts]
dog-breed-bot = "dog_breed_bot.commands:app"
